Fix Add Gap Between Main Block And Footer According To Design

--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -146,6 +146,10 @@
     color: var(--white);
 }
 
+.main {
+    margin-bottom: 82px;
+}
+
 .menu {
     padding: 0 16px;
 }
